unpackaged/main/default/objects/Gong__Call_Participant__c/fields/Gong__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Gong__Full_Name__c</fullName>
    <label>Raw Full Name (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>