unpackaged/main/default/objects/Gong__Call_Participant__c/fields/Gong__Full_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Gong__Full_Name_Display__c</fullName>
    <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , Gong__Full_Name__c , Gong__User_Participant__r.FirstName &amp; &quot; &quot; &amp;Gong__User_Participant__r.LastName),
			Gong__Lead_Participant__r.FirstName &amp;&quot; &quot; &amp;Gong__Lead_Participant__r.LastName ), 
				Gong__Contact_Participant__r.FirstName  &amp; &quot; &quot; &amp; Gong__Contact_Participant__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>~Full Name (Deprecated)</label>
    <type>Text</type>
</CustomField>