unpackaged/main/default/objects/Gong__Call_Participant__c/fields/Gong__Phone_Participant__c.field-meta.xml
<CustomField>
    <fullName>Gong__Phone_Participant__c</fullName>
    <label>~Participant Phone (Deprecated)</label>
    <type>Phone</type>
</CustomField>