unpackaged/main/default/objects/Gong__Call_Participant__c/fields/Gong__Title__c.field-meta.xml
<CustomField>
    <fullName>Gong__Title__c</fullName>
    <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;&quot; ,  Gong__User_Participant__r.Title ),
			 Gong__Lead_Participant__r.Title  ), 
				 Gong__Contact_Participant__r.Title )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title (Deprecated)</label>
    <type>Text</type>
</CustomField>