unpackaged/main/default/objects/Gong__Call_Participant__c/fields/Gong__Type__c.field-meta.xml
<CustomField>
    <fullName>Gong__Type__c</fullName>
    <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;Unknown&quot;, &quot;User&quot;),
			&quot;Lead&quot;), &quot;Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Type (Deprecated)</label>
    <type>Text</type>
</CustomField>